added node-sass and gulp-sass pack

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/ups7write/uber_project_test_push_repo#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
-    "gulp-cli": "^2.2.0"
+    "gulp-cli": "^2.2.0",
+    "gulp-sass": "^4.0.2",
+    "node-sass": "^4.13.0"
   }
 }
