--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "node-sass": "^4.13.0"
+  },
+  "dependencies": {
+    "npm": "^6.14.4"
   }
 }
